# web-scraping-course

./: .gitignore  README.md  requirements.txt
course/: 01-server-client-arch.ipynb  02-dom.ipynb  04-get-blog-post-up.ipynb  05-base-scrapy.ipynb  07-google-maps.ipynb  08-cloudflare-captcha.ipynb
course/03-upa-ux-news/: Dockerfile  Makefile  README.md  compose.yml  main.py  pyproject.toml
course/03-upa-ux-news/src/models/: news.py  status.py
course/03-upa-ux-news/src/routes/: news.py  status.py
course/06-up-blog-news/: .env.example  .gitignore  Dockerfile  compose.yml  requirements.txt  scrapy.cfg  scrapyd.conf
course/06-up-blog-news/up_blog_news/: items.py  middlewares.py  pipelines.py  settings.py
course/06-up-blog-news/up_blog_news/spiders/: up_blog_news_spider.py
